// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Brand story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> BrandDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> BrandWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> DismissableBelowContent story renders snapshot 1`] = `
<h1
  class="heading heading--size-h1 heading"
>
  Page Title
</h1>
`;

exports[`<Banner /> DismissableWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> Error story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      error
    </title>
    <path
      d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> ErrorDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      error
    </title>
    <path
      d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> ErrorWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      error
    </title>
    <path
      d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--error"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--error button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Flat story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal banner--flat"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Neutral story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      notice
    </title>
    <path
      d="M2 17V2H17V13H6L2 17ZM6 18V15H19V6H22V22L18 18H6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NeutralDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      notice
    </title>
    <path
      d="M2 17V2H17V13H6L2 17ZM6 18V15H19V6H22V22L18 18H6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> NeutralWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      notice
    </title>
    <path
      d="M2 17V2H17V13H6L2 17ZM6 18V15H19V6H22V22L18 18H6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--neutral-strong"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NoDescription story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> NoTitle story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Success story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      success
    </title>
    <path
      d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> SuccessDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      success
    </title>
    <path
      d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> SuccessWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      success
    </title>
    <path
      d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--success"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--success button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Vertical story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> VerticalDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> VerticalDismissableWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> VerticalWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      attention
    </title>
    <path
      d="M4 19V17H6V10C6 8.61667 6.41667 7.38733 7.25 6.312C8.08333 5.23733 9.16667 4.53333 10.5 4.2V2H13.5V4.2C14.8333 4.53333 15.9167 5.23733 16.75 6.312C17.5833 7.38733 18 8.61667 18 10V17H20V19H4ZM12 22C11.45 22 10.9793 21.8043 10.588 21.413C10.196 21.021 10 20.55 10 20H14C14 20.55 13.8043 21.021 13.413 21.413C13.021 21.8043 12.55 22 12 22Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--brand"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> Warning story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      warning
    </title>
    <path
      d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
</aside>
`;

exports[`<Banner /> WarningDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      warning
    </title>
    <path
      d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss notification
      </title>
      <path
        d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
      />
    </svg>
  </button>
</aside>
`;

exports[`<Banner /> WarningWithAction story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      warning
    </title>
    <path
      d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
    />
  </svg>
  <div
    class="banner__text-and-action"
  >
    <div>
      <h3
        class="heading heading--size-title-md heading--warning"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--sm text--neutral-medium"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style clickable-style--link clickable-style--neutral button button--link"
          type="button"
        >
          click into the course.
        </button>
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--warning button button--secondary"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</aside>
`;
